--- a/templates/frontend/post/index.twig
+++ b/templates/frontend/post/index.twig
@@ -18,90 +18,22 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="#"><h4 class="card-title">Titre de l'article</h4></a>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-                        <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
-                        <small><i class="far fa-calendar-alt"></i> 3 janvier 2020 14:20 | <i class="far fa-comments"></i> 3</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="#"><h4 class="card-title">Titre de l'article</h4></a>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-                        <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
-                        <small><i class="far fa-calendar-alt"></i> 3 janvier 2020 14:20 | <i class="far fa-comments"></i> 3</small>
+            {% for post in posts %}
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+                        <div class="card-body">
+                            <a href="articles/{{ post.slug }}-{{ post.id }}"><h4 class="card-title">{{ post.title}}</h4></a>
+                            <p class="card-text">{{ post.description | truncate(100)}}</p>
+                            <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
+                        </div>
+                        <div class="card-footer">
+                            <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
+                            <small><i class="far fa-calendar-alt"></i> {{ post.createdAt | dateFR }} | <i class="far fa-comments"></i> 3</small>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="#"><h4 class="card-title">Titre de l'article</h4></a>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-                        <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
-                        <small><i class="far fa-calendar-alt"></i> 3 janvier 2020 14:20 | <i class="far fa-comments"></i> 3</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="#"><h4 class="card-title">Titre de l'article</h4></a>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-                        <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
-                        <small><i class="far fa-calendar-alt"></i> 3 janvier 2020 14:20 | <i class="far fa-comments"></i> 3</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="#"><h4 class="card-title">Titre de l'article</h4></a>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-                        <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
-                        <small><i class="far fa-calendar-alt"></i> 3 janvier 2020 14:20 | <i class="far fa-comments"></i> 3</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="#"><h4 class="card-title">Titre de l'article</h4></a>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-                        <small><i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">PHP</a></small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>Bastien CLEMENT</b></div></small>
-                        <small><i class="far fa-calendar-alt"></i> 3 janvier 2020 14:20 | <i class="far fa-comments"></i> 3</small>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 
