--- a/templates/frontend/post/show.twig
+++ b/templates/frontend/post/show.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/default.twig' %}
 
 {% block title %}
-    <title>Blog PHP : Titre de l'article</title>
+    <title>Blog PHP : {{ post.title }}</title>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
             <div class="col-lg-12">
                 <img class="img-fluid rounded" src="http://placehold.it/1200x400" alt="">
                 <hr>
-                <p>Lorem Ipsum</p>
+                <p>{{ post.content}}</p>
                 <hr>
             </div>
         </div>
