--- a/templates/frontend/home/index.twig
+++ b/templates/frontend/home/index.twig
@@ -26,7 +26,7 @@
                         <small><div>Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b></div></small>
                         <small>
                             <i class="far fa-calendar-alt"></i> {{ post.createdAt | dateFR }} |
-                            <i class="far fa-comments"></i> {{ post.comments | count }}
+                            <i class="far fa-comments"></i> {{ post.comments | length }}
                         </small>
                     </div>
                 </div>
