--- a/templates/frontend/post/header.twig
+++ b/templates/frontend/post/header.twig
@@ -10,7 +10,7 @@
                 <small class="text-white-50">
                     Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b> <br>
                     <i class="far fa-calendar-alt"></i> {{ post.createdAt | dateFR }} |
-                    <i class="far fa-comments"></i> {{ post.comments | count }} {%  if post.comments | count <= 1 %} commentaire {% else %} commentaires {% endif %}
+                    <i class="far fa-comments"></i> {{ post.comments | length }} {%  if post.comments | length <= 1 %} commentaire {% else %} commentaires {% endif %}
                 </small>
                 <div class="mt-3">
                     <span class="badge badge-light">
