--- a/templates/backend/layouts/footer.twig
+++ b/templates/backend/layouts/footer.twig
@@ -1,5 +1,5 @@
 <footer class="py-3 bg-dark fixed-bottom">
-    <div class="container">
+    <div class="">
         <small class="m-0 text-white">Copyright &copy; Projet 5 OCR • Blog PHP 2020 </small>
     </div>
 </footer>
