--- a/templates/backend/dashboard/index.twig
+++ b/templates/backend/dashboard/index.twig
@@ -10,107 +10,22 @@
 <div class="container-fluid mt-5 pt-5">
     <div class="row">
         <div class="col-md-2">
-            <ul class="list-group">
-                <a href="" class="list-group-item list-group-item-action">
-                    <li class="d-flex justify-content-between align-items-center">
-                        <span><i class="fas fa-clipboard"></i> Articles</span>
-                        <span class="badge badge-danger badge-pill ml-2">14</span>
-                    </li>
-                </a>
-                <a href="" class="list-group-item list-group-item-action">
-                    <li class="d-flex justify-content-between align-items-center">
-                        <span><i class="fas fa-tags"></i> Catégories</span>
-                        <span class="badge badge-danger badge-pill ml-2">2</span>
-                    </li>
-                </a>
-                <a href="" class="list-group-item list-group-item-action">
-                    <li class="d-flex justify-content-between align-items-center">
-                        <span><i class="fas fa-user-friends"></i> Utilisateurs</span>
-                        <span class="badge badge-danger badge-pill ml-2">1</span>
-                    </li>
-                </a>
-                <a href="" class="list-group-item list-group-item-action">
-                    <li class="d-flex justify-content-between align-items-center">
-                        <span><i class="fas fa-comment-alt"></i> Commentaires</span>
-                        <span class="badge badge-danger badge-pill ml-2">1</span>
-                    </li>
-                </a>
-            </ul>
+            {% include 'backend/layouts/adminNavbar.twg' %}
         </div>
         <div class="col-md-10">
-            <h1>Articles</h1>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Titre</th>
-                    <th scope="col">Auteur</th>
-                    <th scope="col">Date de création</th>
-                    <th scope="col">Dernière mise à jour</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th class="align-middle" scope="row">1</th>
-                    <td class="align-middle">Comment sont considérés les développeurs en France ?</td>
-                    <td class="align-middle">Bastien CLEMENT</td>
-                    <td class="align-middle">03 février 2020 | 08:53 </td>
-                    <td class="align-middle">03 février 2020 | 08:53 </td>
-                    <td>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Right-aligned menu
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <button class="dropdown-item" type="button">Action</button>
-                                <button class="dropdown-item" type="button">Another action</button>
-                                <button class="dropdown-item" type="button">Something else here</button>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th class="align-middle" scope="row">2</th>
-                    <td class="align-middle">L’incroyable ego des développeurs</td>
-                    <td class="align-middle">Thornton BRID</td>
-                    <td class="align-middle">03 février 2020 | 08:53 </td>
-                    <td class="align-middle">03 février 2020 | 08:53 </td>
-                    <td>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Right-aligned menu
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <button class="dropdown-item" type="button">Action</button>
-                                <button class="dropdown-item" type="button">Another action</button>
-                                <button class="dropdown-item" type="button">Something else here</button>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td class="align-middle">Comment devenir développeur web en 2020</td>
-                    <td class="align-middle">Loïc LANDEAUD</td>
-                    <td class="align-middle">03 février 2020 | 08:53 </td>
-                    <td class="align-middle">03 février 2020 | 08:53 </td>
-                    <td>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Right-aligned menu
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <button class="dropdown-item" type="button">Action</button>
-                                <button class="dropdown-item" type="button">Another action</button>
-                                <button class="dropdown-item" type="button">Something else here</button>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
+            <div class="card">
+                <div class="card-header">
+                    Featured
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                <div class="card-footer text-muted">
+                    2 days ago
+                </div>
+            </div>
         </div>
     </div>
 </div>
