--- a/templates/backend/dashboard/post/index.twig
+++ b/templates/backend/dashboard/post/index.twig
@@ -28,6 +28,7 @@
                                 <th scope="col">Catégorie</th>
                                 <th scope="col">Auteur</th>
                                 <th scope="col">Date de création</th>
+                                <th scope="col">Date de modification</th>
                                 <th scope="col"></th>
                             </tr>
                         </thead>
@@ -42,6 +43,7 @@
                                 </td>
                                 <td>{{ post.author.firstName }} {{ post.author.lastName | upper }}</td>
                                 <td>{{ post.createdAt | dateFR }}</td>
+                                <td>{% if post.updatedAt %} {{ post.updatedAt | dateFR }} {% endif %}</td>
                                 <td>
                                     <a class="btn-link text-danger" href="/dashboard/articles/{{ post.slug }}-{{ post.id }}/delete" role="button"><i class="far fa-trash-alt"></i> Supprimer</a>
                                 </td>
