--- a/templates/backend/dashboard/post/formCreate.twig
+++ b/templates/backend/dashboard/post/formCreate.twig
@@ -28,7 +28,7 @@
                                             <div class="custom-file">
                                                 <input type="file" class="custom-file-input" id="imagePost" name="image_post">
                                                 <label class="custom-file-label" for="imagePost">Sélectionner un fichier</label>
-                                                <input type="hidden" name="MAX_FILE_SIZE" value="100000">
+                                                <input type="hidden" name="MAX_FILE_SIZE" value="2000000">
                                             </div>
                                         </div>
                                         <div class="form-group">
