--- a/templates/frontend/post/index.twig
+++ b/templates/frontend/post/index.twig
@@ -21,7 +21,7 @@
             {% for post in posts %}
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
-                        <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+                        <img class="card-img-top img-crop-thumb" src="/uploads/posts/{{ post.image }}" alt="">
                         <div class="card-body">
                             <a href="articles/{{ post.slug }}-{{ post.id }}"><h4 class="card-title">{{ post.title }}</h4></a>
                             <p class="card-text">{{ post.description | truncate(100) }}</p>
