--- a/templates/frontend/post/show.twig
+++ b/templates/frontend/post/show.twig
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-fluid rounded" src="http://placehold.it/1200x400" alt="">
+                <img class="img-fluid rounded img-crop-thumb" src="/uploads/posts/{{ post.image }}" alt="">
                 <hr>
                 <p>{{ post.content }}</p>
                 <hr>
