update ImagePost & paginations

--- a/templates/backend/dashboard/post/index.twig
+++ b/templates/backend/dashboard/post/index.twig
@@ -45,24 +45,13 @@
                                 <td>{{ post.createdAt | dateFR }}</td>
                                 <td>{% if post.updatedAt %} {{ post.updatedAt | dateFR }} {% endif %}</td>
                                 <td>
-                                    <a class="btn-link text-danger" href="/dashboard/articles/{{ post.slug }}-{{ post.id }}/delete" role="button"><i class="far fa-trash-alt"></i> Supprimer</a>
+                                    <a class="btn-link text-danger" href="/dashboard/articles/{{ post.slug }}-{{ post.id }}/delete" role="button"><i class="far fa-trash-alt"></i></a>
                                 </td>
                             </tr>
                             {% endfor %}
                         </tbody>
                     </table>
-                    <nav aria-label="Page navigation example" class="d-flex justify-content-end">
-                        <ul class="pagination">
-                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="card-footer text-muted">
-
+                    {{ pagination | raw }}
                 </div>
             </div>
         </div>
