--- a/templates/backend/layouts/adminNavbar.twig
+++ b/templates/backend/layouts/adminNavbar.twig
@@ -3,13 +3,13 @@
     <a href="/dashboard/articles" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-clipboard"></i> Articles</span>
-            <span class="badge badge-danger badge-pill ml-2">14</span>
+            <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
     <a href="" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-tags"></i> Catégories</span>
-            <span class="badge badge-danger badge-pill ml-2">2</span>
+            <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
     <a href="" class="list-group-item list-group-item-action">
