--- a/templates/backend/dashboard/post/formCreate.twig
+++ b/templates/backend/dashboard/post/formCreate.twig
@@ -45,7 +45,7 @@
                                     <div class="col-md-7 col-sm-12">
                                         <div class="form-group">
                                             <label for="title">Titre de l'article</label>
-                                            <input type="text" class="form-control" id="title" name='title' value="{{ post.title }}" required>
+                                            <input type="text" class="form-control" id="title" name='title' value="{{ post['post']['title'] }}" required>
                                         </div>
                                         <div class="form-group">
                                             <label for="title">Slug</label>
