--- a/templates/backend/dashboard/post/formEdit.twig
+++ b/templates/backend/dashboard/post/formEdit.twig
@@ -12,6 +12,7 @@
                 {% include 'backend/layouts/adminNavbar.twig' %}
             </div>
             <div class="col-md-10">
+                {% include 'backend/layouts/alert.twig' %}
                 <div class="card">
                     <div class="card-header">
                         Liste des articles
@@ -22,7 +23,7 @@
                             <section class=" mt-5">
                                 <div class="row">
                                     <div class="col-md-5 col-sm-12">
-                                            <img src="/uploads/posts/{{ post.image }}" alt="..." class="img-thumbnail img-crop-thumb">
+                                        <img src="/uploads/posts/{{ post.image }}" alt="..." class="img-thumbnail img-crop-thumb">
                                         <div class="form-group mt-3">
                                             <label>Image</label>
                                             <div class="custom-file">
@@ -72,7 +73,7 @@
                         </div>
                         <div class="card-footer text-muted">
                             <div class="d-flex justify-content-between">
-                                <a class="btn btn-danger" href="#" role="button">Supprimer</a>
+                                <a class="btn btn-danger" href="/dashboard/articles/{{ post.slug }}-{{ post.id }}/delete" role="button">Supprimer</a>
                                 <button type="submit" class="btn btn-success mr-2">Créer</button>
                             </div>
                         </div>
