--- a/templates/backend/layouts/adminNavbar.twig
+++ b/templates/backend/layouts/adminNavbar.twig
@@ -6,7 +6,7 @@
             <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
-    <a href="" class="list-group-item list-group-item-action">
+    <a href="/dashboard/categories" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-tags"></i> Catégories</span>
             <span class="badge badge-danger badge-pill ml-2"></span>
