--- a/templates/backend/dashboard/category/index.twig
+++ b/templates/backend/dashboard/category/index.twig
@@ -15,7 +15,7 @@
                 {% include 'backend/layouts/alert.twig' %}
                 <div class="card">
                     <div class="card-header">
-                        Liste des articles
+                        Liste des catégories
                     </div>
                     <div class="card-body">
                         <div class="d-flex justify-content-end mb-3">
@@ -24,7 +24,7 @@
                         <table class="table">
                             <thead class="thead-light">
                             <tr>
-                                <th scope="col">Nom de la catégorie</th>
+                                <th scope="col">Catégorie</th>
                                 <th scope="col"></th>
                             </tr>
                             </thead>
