--- a/templates/backend/dashboard/post/formCreate.twig
+++ b/templates/backend/dashboard/post/formCreate.twig
@@ -1,7 +1,7 @@
 {% extends 'backend/layouts/default.twig' %}
 
 {% block title %}
-    <title>Blog PHP : Liste des articles</title>
+    <title>Blog PHP : Création article</title>
 {% endblock %}
 
 {% block content %}
