--- a/templates/backend/dashboard/post/formEdit.twig
+++ b/templates/backend/dashboard/post/formEdit.twig
@@ -1,7 +1,7 @@
 {% extends 'backend/layouts/default.twig' %}
 
 {% block title %}
-    <title>Blog PHP : Liste des articles</title>
+    <title>Blog PHP : Article {{ post.title }}</title>
 {% endblock %}
 
 {% block content %}
