adm list user & cud

--- a/templates/backend/layouts/adminNavbar.twig
+++ b/templates/backend/layouts/adminNavbar.twig
@@ -1,5 +1,5 @@
 
-<ul class="list-group">
+<ul class="list-group mb-3">
     <a href="/dashboard/articles" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-clipboard"></i> Articles</span>
@@ -12,10 +12,10 @@
             <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
-    <a href="" class="list-group-item list-group-item-action">
+    <a href="/dashboard/utilisateurs" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-user-friends"></i> Utilisateurs</span>
-            <span class="badge badge-danger badge-pill ml-2">1</span>
+            <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
     <a href="" class="list-group-item list-group-item-action">
