--- a/templates/backend/dashboard/user/index.twig
+++ b/templates/backend/dashboard/user/index.twig
@@ -36,9 +36,9 @@
                                 <tr>
                                     <td>
                                     {% if user.disabled == 1 %}
-                                        <span class="badge badge-success">OUI</span>
+                                        <i class="fas fa-eye"></i>
                                     {% else %}
-                                        <span class="badge badge-warning">NON</span>
+                                        <i class="fas fa-eye-slash"></i>
                                     </td>
                                     {% endif %}
                                    <td>
