--- a/templates/backend/layouts/default.twig
+++ b/templates/backend/layouts/default.twig
@@ -10,6 +10,10 @@
         <!-- Font Awesome 5 CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
         <style>
+            body {
+                color: #152c5b;
+                background-color: #fafbfe;
+            }
             .img-crop {
                 width: 100%;
                 height: 500px;
