--- a/templates/backend/layouts/adminNavbar.twig
+++ b/templates/backend/layouts/adminNavbar.twig
@@ -3,25 +3,26 @@
     <a href="/dashboard/articles" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-clipboard"></i> Articles</span>
-            <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
     <a href="/dashboard/categories" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-tags"></i> Catégories</span>
-            <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
     <a href="/dashboard/utilisateurs" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-user-friends"></i> Utilisateurs</span>
-            <span class="badge badge-danger badge-pill ml-2"></span>
         </li>
     </a>
-    <a href="" class="list-group-item list-group-item-action">
+    <a href="/dashboard/commentaires" class="list-group-item list-group-item-action">
         <li class="d-flex justify-content-between align-items-center">
             <span><i class="fas fa-comment-alt"></i> Commentaires</span>
-            <span class="badge badge-danger badge-pill ml-2">1</span>
         </li>
     </a>
 </ul>
+
+
+
+
+
