--- a/templates/frontend/inscription/form.twig
+++ b/templates/frontend/inscription/form.twig
@@ -1,4 +1,16 @@
-<form class="" action="#" method="POST">
+
+{{ dump(session) }}
+<form class="" action="/inscription/create/" method="POST">
+    <div class="row">
+        <div class="col-sm-12">
+            <fieldset>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="username" class="form-control" required>
+                </div>
+            </fieldset>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm-12 col-md-6">
             <fieldset>
@@ -18,16 +30,6 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
-            <fieldset>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" required>
-                </div>
-            </fieldset>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-sm-12 col-md-6">
             <fieldset>
                 <div class="form-group">
@@ -39,8 +41,8 @@
         <div class="col-sm-12 col-md-6">
             <fieldset>
                 <div class="form-group">
-                    <label for="password2">Mot de passe</label>
-                    <input type="password" id="password2" name="password2" class="form-control" required>
+                    <label for="password2">Confirmez le mot de passe</label>
+                    <input type="password" id="password2" name="confirm_password" class="form-control" required>
                 </div>
             </fieldset>
         </div>
