--- a/templates/frontend/login/form.twig
+++ b/templates/frontend/login/form.twig
@@ -1,4 +1,4 @@
-<form class="mb-5" action="" method="POST">
+<form class="mb-5" action="/connexion/login/" method="POST">
     <div class="row">
         <div class="col-sm-12">
             <fieldset>
